--- a/service.html
+++ b/service.html
@@ -8,9 +8,52 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div class="preloader">
+        <div class="preloader__body">
+            <div class="preloader__inner">
+                <h2>
+                    Success & innovations financial Management
+                </h2>
+                <div class="preloader__img">
+                    <div class="preloader__img--arrow">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 220 174" style="enable-background:new 0 0 220 174;" xml:space="preserve">
+                                    <style type="text/css">
+                                        .st01{fill:transparent;}
+                                        .st02{fill:none;stroke:#1FFF83;stroke-width:7;stroke-miterlimit:10;}
+                                    </style>
+                                    <polygon class="st01 path-line-preloader-arrow" points="191.2,18.5 210.8,13.6 216.1,32.7 220,-0.2 "/>
+                                    <path class="st02 path-line-preloader" d="M0,168.8c73.4,0,178.5-95.7,210.8-155.2"/>
+                        </svg>
+                    </div>
+                    <div class="preloader__img--mountain">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 314 174" style="enable-background:new 0 0 314 174;" xml:space="preserve">
+                                    <style type="text/css">
+                                        .st0{fill:#FFC728;}
+                                    </style>
+                                    <polygon class="st0" points="0.4,169.5 43.6,133.3 45.7,124.1 50.8,127.3 57.8,133.9 57.8,142.3 71.8,158 71.8,171.1 62,157.5 
+                                        53.9,153.9 51.7,143.5 40,144.2 39.1,140 2.1,171.1 "/>
+                                    <path class="st0" d="M54.1,127.3c0.6-1,16.4-17.2,16.4-17.2l22-28.7l14.2,19.1l22,32.3l8.4,13l5.7,3.5l15.4,24.3l-21.1-9.7
+                                        l-13.4-12.1l-7-3.6l-3.8-14.2l-6.6-9.7l-3.9,15.7l-10-13.6l-6.4-22.4l12.3,2.6l-5.9-20.6l-19.3,25.9l-17.3,17.4L54.1,127.3z"/>
+                                    <path d="M75,112.8"/>
+                                    <polygon class="st0" points="107.7,75.1 121,60 127.5,40.7 129.5,59.3 128.1,77.3 139,89.3 149.9,111.7 164.1,100.6 171.7,114.6 
+                                        193.2,136.8 217.8,168.6 193,119.7 178.7,95.1 198.7,106.6 186.3,83.1 171.2,69.1 173.7,80.5 161.4,66.5 158,57.2 150.4,47.8 
+                                        153,59.4 152.8,68.5 137.3,46.3 136.4,44.1 126.8,34.5 118.8,57.4 106,72.7 "/>
+                                    <polygon class="st0" points="149.2,42.9 163,29.7 178.1,4.4 178.1,20.3 174.5,33.5 179.6,29.5 185.2,53.4 219.7,99.9 218.7,78.7 
+                                        226.7,81.3 244.8,95.8 251.9,89.3 254.4,99.9 258.3,118.7 238.5,104.7 237,106.8 247.7,130.1 260.9,151.5 268,143 314.1,170 
+                                        283.4,130.4 266.5,95.4 264,91.6 259.8,95.8 252,86.6 244.5,93.3 212.8,58.2 197.9,39.5 178.5,0.2 161.9,28.4 147.7,41.5 "/>
+                        </svg>
+                    </div>
+                </div>
+                <p>ELBURZ</p>
+            </div>
+        </div>
+    </div>
+
     <div class="wrapper">
         <header class="header">
-            <div class="header__container container">
                 <div class="header__wrapper">
                     <a href="index.html" class="header__logo">
                         <img src="img/header/Logo.svg" alt="">
@@ -60,7 +103,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </header>
         <div class="content">
             <div class="service">
@@ -70,7 +112,7 @@
                             <div class="service__title--block anim__items">
                                 <p>Service</p>
                                 <p>Our clients really 
-                                 value our solutions                                  </p>
+                                 value our solutions</p>
 
                                 <span class="top"></span>
                                 <span class="right"></span>
@@ -101,11 +143,17 @@
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img.webp" alt="">
                                     </div>
+                                    <div class="service__body--item--info">
+                                        <p>Какой-то текст</p>
+                                    </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--cat" hidden>Arbitration</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img-2.webp" alt="">
+                                    </div>
+                                    <div class="service__body--item--info">
+                                        <p>Какой-то текст</p>
                                     </div>
                                 </div>
                                 <div class="service__body--item">
@@ -113,11 +161,17 @@
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img-3.webp" alt="">
                                     </div>
+                                    <div class="service__body--item--info">
+                                        <p>Какой-то текст</p>
+                                    </div>
                                 </div>
                                 <div class="service__body--item">
                                     <div class="service__body--item--cat" hidden>Arbitration</div>
                                     <div class="service__body--item--img ibg">
                                         <img src="img/service__imgs/item_img.webp" alt="">
+                                    </div>
+                                    <div class="service__body--item--info">
+                                        <p>Какой-то текст</p>
                                     </div>
                                 </div>
                                 <div class="service__body--item">
@@ -126,7 +180,7 @@
                                         <img src="img/service__imgs/item_img-2.webp" alt="">
                                     </div>
                                     <div class="service__body--item--info">
-
+                                        <p>Какой-то текст</p>
                                     </div>
                                 </div>
                             </div>
@@ -143,23 +197,34 @@
                         <div class="footer__title--subtitle">We can give a fast response via email, phone call, skype or telegram.</div>
                     </div>
                     <div class="footer__contacts">
-                        <div class="footer__item footer__mail">
+                        <div class="footer__item footer__mail anim__items">
                             <div class="footer__mail--img">
-                                <img src="img/footer/telegram.svg" alt="">
+                                <svg width="54" height="56" viewBox="0 0 54 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path id="shape" fill-rule="evenodd" clip-rule="evenodd" d="M51.9104 0.134719L23.6442 13.4671C22.9083 13.8141 22.5895 14.7002 22.9321 15.4459C23.2748 16.1915 24.1491 16.5149 24.8847 16.1675L42.3212 7.94308L33.8442 14.8964L14.3908 30.8527L3.75061 26.1358L18.6607 19.1032C19.3966 18.7558 19.7155 17.8701 19.3728 17.1244C19.0303 16.3788 18.1556 16.0553 17.4203 16.4027L1.37089 23.9729C0.51764 24.3753 -0.0210055 25.2556 0.000628282 26.2086C0.0217121 27.1411 0.577958 27.9804 1.42113 28.3542L13.3018 33.6205L16.7813 54.7739C16.9955 56.0819 18.7434 56.4543 19.4604 55.3451L29.3306 40.0808L47.9964 48.9068C49.4919 49.6145 51.2715 48.533 51.368 46.8697L53.9977 1.5716C54.0005 1.52961 54.0003 1.48652 53.9994 1.44435C53.9701 0.390144 52.8524 -0.306653 51.9104 0.134719ZM18.2576 47L16 33.1022L39 14L21.3967 34.249C21.2383 34.4313 21.1208 34.6606 21.0662 34.8987L18.2576 47ZM24.1353 37L22 46L27 38.3416L24.1353 37ZM28.0491 36L25 34.518L40 17L37.8304 20.4495L28.0491 36ZM31 37.6878L48.718 46L51 7L31 37.6878Z" fill="#CCCCCC"/>
+                                </svg>
                             </div>
                             <div class="footer__mail--text">For business inquiries</div>
                             <a href="mailto:info@elburz.com" class="footer__mail--link">info@elburz.com</a>
                         </div>
-                        <div class="footer__item footer__telephone">
+                        <div class="footer__item footer__telephone anim__items">
                             <div class="footer__mail--img">
-                                <img src="img/footer/smartphone.svg" alt="">
+                                <svg width="39" height="71" viewBox="0 0 39 71" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path id = "shape" fill-rule="evenodd" clip-rule="evenodd" d="M33.2647 0H5.73529C2.56925 0.00354992 0.0035558 2.565 0 5.72581V65.2742C0.0035558 68.435 2.56925 70.9965 5.73529 71H33.2647C36.4307 70.9965 38.9964 68.435 39 65.2742V5.72581C38.9964 2.565 36.4307 0.00354992 33.2647 0ZM27.2773 2.29032L26.5891 5.72581H12.411L11.7228 2.29032H27.2773ZM33.2647 68.7097C35.1643 68.7076 36.7038 67.1707 36.7059 65.2742V5.72581C36.7038 3.82932 35.1643 2.29245 33.2647 2.29032H29.6169L28.6542 7.09556C28.547 7.63085 28.0762 8.01615 27.5294 8.01613H11.4706C10.9238 8.01615 10.453 7.63085 10.3458 7.09556L9.38308 2.29032H5.73529C3.83567 2.29245 2.29625 3.82932 2.29412 5.72581V65.2742C2.29625 67.1707 3.83567 68.7076 5.73529 68.7097H33.2647Z" fill="#CCCCCC"/>
+                                    <path d="M12.875 64H6.125C5.50368 64 5 64.4477 5 65C5 65.5523 5.50368 66 6.125 66H12.875C13.4963 66 14 65.5523 14 65C14 64.4477 13.4963 64 12.875 64Z" fill="#CCCCCC"/>
+                                    <path d="M17 64H16C15.4477 64 15 64.4477 15 65C15 65.5523 15.4477 66 16 66H17C17.5523 66 18 65.5523 18 65C18 64.4477 17.5523 64 17 64Z" fill="#CCCCCC"/>
+                                </svg>
                             </div>
                             <div class="footer__mail--text">Call us on</div>
                             <a href="tel:+91 98241 82099" class="footer__mail--link">+91 98241 82099</a>
                         </div>
-                        <div class="footer__item footer__skype">
+                        <div class="footer__item footer__skype anim__items">
                             <div class="footer__mail--img">
-                                <img src="img/footer/chat.svg" alt="">
+                                <svg id = "shape" width="60" height="56" viewBox="0 0 60 56" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M10 23H23C23.553 23 24 22.552 24 22C24 21.448 23.553 21 23 21H10C9.447 21 9 21.448 9 22C9 22.552 9.447 23 10 23Z" fill="#CCCCCC"/>
+                                    <path d="M36 27H10C9.447 27 9 27.448 9 28C9 28.552 9.447 29 10 29H36C36.553 29 37 28.552 37 28C37 27.448 36.553 27 36 27Z" fill="#CCCCCC"/>
+                                    <path d="M36 33H10C9.447 33 9 33.448 9 34C9 34.552 9.447 35 10 35H36C36.553 35 37 34.552 37 34C37 33.448 36.553 33 36 33Z" fill="#CCCCCC"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M54.072 0.07L19.93 0C16.66 0 14 2.66 14 5.93V11.054L5.93 11.071C2.66 11.071 0 13.731 0 17.001V38.142C0 41.412 2.66 44.071 5.93 44.071H12V54.071C12 54.484 12.254 54.855 12.64 55.004C12.757 55.049 12.879 55.071 13 55.071C13.276 55.071 13.547 54.956 13.74 54.744L23.444 44.069L40.07 44.001C43.34 44.001 46 41.341 46 38.072V37.959L51.26 43.745C51.453 43.957 51.724 44.072 52 44.072C52.121 44.072 52.243 44.05 52.36 44.005C52.746 43.856 53 43.485 53 43.072V33.072H54.07C57.34 33.072 60 30.412 60 27.143V6C60 2.731 57.341 0.071 54.072 0.07ZM44 38.071C44 40.238 42.237 42 40.066 42L22.996 42.07C22.716 42.071 22.448 42.19 22.26 42.397L14 51.484V43.07C14 42.518 13.553 42.07 13 42.07H5.93C3.763 42.07 2 40.307 2 38.141V17C2 14.833 3.763 13.07 5.932 13.07L15 13.051H15.002L40.07 12.999C42.237 12.999 44 14.762 44 16.929V35.37V38.071ZM54.07 31.07C56.237 31.07 58 29.308 58 27.141H58.001V5.999C58.001 3.832 56.238 2.069 54.071 2.069H54.069L19.928 1.999C17.763 1.999 16 3.762 16 5.929V11.049L40.068 11C43.34 11 46 13.66 46 16.93V34.984L51 40.484V32.07C51 31.518 51.447 31.07 52 31.07H54.07Z" fill="#CCCCCC"/>
+                                </svg>
                             </div>
                             <div class="footer__mail--text">Let's Skype</div>
                             <a href="mailto:info@elburz.com" class="footer__mail--link">ELBURZ</a>
