--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </svg>
                     </div>
                 </div>
-                <p>ELBURZ</p>
+                <p>LOGO</p>
             </div>
         </div>
     </div>
@@ -56,9 +56,9 @@
     <div class="wrapper">
         <header class="header">
                 <div class="header__wrapper">
-                    <div class="header__logo">
+                    <a href="" class="header__logo">
                         <img src="img/header/Logo.svg" alt="">
-                    </div> 
+                    </a>  
                     <div class="header__burger">
                         <button class="header__burger--btn">
                             <div class="header__burger--name">Other</div>
@@ -138,10 +138,10 @@
                                     </svg>
                                 </div>                  
                             </div>
-                            <h1 class="main__logo--title">ELBURZ</h1>
+                            <h1 class="main__logo--title">LOGO</h1>
                         </div>
                         <div class="main__info">
-                            <div class="main__info--title">ELBURZ</div>
+                            <div class="main__info--title">LOGO</div>
                             <h2 class="main__info--subtitle">ON THE WAY TO THE TOP</h2>
                         </div>
                         <div class="main__scroll--img">
@@ -239,7 +239,7 @@
                                 </h2>
                                 <div class="achievements__info--blocks">
                                     <h3 class="achievements__info--block achievements__info--block--main anim__items">
-                                        <p>ELBURZ</p>
+                                        <p>Logo</p>
                                         <p>An award winning 
                                             Investors Choice 
                                             </p>
@@ -352,7 +352,7 @@
                                 <div class="inquire__body--content anim__items">
                                     <div class="inquire__body--content--inner">
                                         <p>Do you want to become a partner?
-                                        Join ELBURZ Financial Management today!</p>
+                                        Join LOGO Financial Management today!</p>
                                         <button class="inquire__body--content--btn">
                                             Let’s start our partnership
                                             <span></span>
@@ -370,7 +370,7 @@
                             <div class="career__title anim__items">
                                 <p>Career</p>
                                 <p>Do you want to 
-                                    join ELBURZ?</p>
+                                    join LOGO?</p>
 
                                 <span class="top"></span>
                                 <span class="right"></span>
@@ -577,7 +577,7 @@
                     </div>
 
                     <div class="footer__copyright">
-                        <p>2021 ELBURZ LLC, Copyright</p>
+                        <p>2021 LOGO LLC, Copyright</p>
                         <img src="img/footer/logo.png" alt="">
                     </div>
                 </div>
