--- a/other.html
+++ b/other.html
@@ -47,7 +47,7 @@
                         </svg>
                     </div>
                 </div>
-                <p>ELBURZ</p>
+                <p>LOGO</p>
             </div>
         </div>
     </div>
@@ -55,7 +55,7 @@
     <div class="wrapper">
         <header class="header">
                 <div class="header__wrapper">
-                    <a href="" class="header__logo">
+                    <a href="index.html" class="header__logo">
                         <img src="img/header/Logo.svg" alt="">
                     </a> 
                     <div class="header__burger">
@@ -110,7 +110,7 @@
                     <div class="other__inner">
                         <div class="other__title">
                             <div class="other__title--block anim__items">
-                                <p>ELBURZ</p>
+                                <p>LOGO</p>
                                 <p>An award winning 
                                  Investors Choice 
                                 </p>
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="footer__copyright">
-                        <p>2021 ELBURZ LLC, Copyright</p>
+                        <p>2021 LOGO LLC, Copyright</p>
                     </div>
                 </div>
             </div>
