--- a/service.html
+++ b/service.html
@@ -267,7 +267,7 @@
                     </div>
 
                     <div class="footer__copyright">
-                        <p>2021 ELBURZ LLC, Copyright</p>
+                        <p>2021 LOGO LLC, Copyright</p>
                     </div>
                 </div>
             </div>
